# pcb-defect-mlops-flywheel

./: .dvcignore  .env.example  .gitignore  LICENSE  README.md  dvc.yaml  last_run_path.txt  main.py  metrics.json  mlflow-history-prod.dvc  mlflow_run.txt  params.yaml  pyproject.toml  requirements.txt  run_experiments.sh
.dvc/: config
.dvc/tmp/: lock
.github/workflows/: ci.yml  train.yml
configs/: config.yaml
data/: raw.dvc
data/processed/: dataset_stats.json  test.npz  val.npz
data/raw/: pcb_1.txt.dvc
data/raw/active_learning/: 00041000_test.txt  00041001_temp.txt  00041001_test.txt  00041002_test.txt  00041003_test.txt  00041004_test.txt
data/yolo/: dataset.yaml
docker/: docker-compose.yml
dvc/: README.md  create_buckets.py  requirements.txt
dvc-storage/.rustfs.sys/: format.json
dvc/tests/: test_data.txt  test_data.txt.dvc  test_dvc.sh
execution_guide/: step_by_step.md
label_studio_data/: label_studio.sqlite3
local-mlflow-history/: mlflow.db
local-mlflow-history/357058803970230616/: meta.yaml
mlflow-history/: mlflow.db
mlflow-history/988701800452074766/: meta.yaml
mlflow-official-history/: mlflow.db
models/: model-settings.json
models/yolov8n_pcb/: args.yaml  results.csv
runs/evaluate/: evaluation_report.json  test_dataset.yaml
scratch/: test_mlflow.py
src/app/: main.py
src/data/: pcb_preprocess_isha.py  preprocess.py
src/serving/: serve.py
src/training/: evaluate.py  model.py  report.py  train.py  train_cnn_stub.py  training_script_isha.py
src/utils/: batch_inference.py  sync_labels.py
(+1715 files in other folders)
